package DesiginPatternHomework.Strategy;

public interface DiscountStrategy {
    double calculate(double originalPrice);
}